Fix issue with celeb box selection being too large

--- a/www/style.css
+++ b/www/style.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.celeb_box {
+  height: 100%;
+  cursor: pointer;
+}
+
 .celeb {
   padding: 30px 0 40px;
   margin-bottom: 30px;
